# choco

./: CMakeLists.txt  README.md  build.sh  grammar.md  run.sh  test.sh
examples/: game.choco
src/: ast.cpp  ast.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  string.hpp  token.cpp  token.hpp  util.hpp
src/runtime/: graphics.cpp  graphics.hpp  interpreter.cpp  interpreter.hpp  memory.cpp  memory.hpp  runtime.cpp  runtime.hpp  scope.cpp  scope.hpp  value.hpp
src/util/: error.cpp  error.hpp  file.cpp  file.hpp  status.cpp  status.hpp  util.hpp
tests/: main.choco  test.cpp
tests/cases/: array_strings.choco  expression.choco  loop_func_struct.choco
